# SPH-Simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  boundary.hpp  build_desktop.sh  build_web.sh  build_web_release.sh  grid.hpp  install_dependencies.sh  main.cpp  materials.hpp  particle.hpp  print.hpp  renderer.hpp  simulation.hpp  vec3.hpp
docs/: index.html
docs/assets/: index-BC6JVyW5.js
src/core/: boundary.hpp  grid.hpp  initialize_simulation.hpp  kernel_function.hpp  particle.hpp  pressure_solver.hpp  renderer.hpp  simulation.hpp  simulation_parameters.hpp  time_integration.hpp  vec3.hpp
src/desktop/: main.cpp
src/web/: bindings.cpp
web/: index.html  main.js  package-lock.json  package.json  vite.config.js
